# fractals

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  fractals.html  fractals.js  fractals.wasm  index.html  notes.typ  package-lock.json  package.json
public/shaders/: shader.frag  shader.vert
src/: canvas.cpp  canvas.h  configuration.h  event_handler.cpp  event_handler.h  fractals.cpp  fractals.h  main.c  main.cpp  main.ts  perturbation.cpp  reference_orbit.cpp  reference_orbit.h  shader.ts  shader_s.h  state.h
src/shaders/: julia.frag  mandelbrot.frag  shader.vert
